third_party/move/move-compiler/transactional-tests/tests/inlining/bug_11112.exp
processed 1 task

task 0 'publish'. lines 1-11:
Error: warning[W09003]: unused assignment
  ┌─ TEMPFILE:6:6
  │
6 │     let s = 2;
  │         ^ Unused assignment or binding for local 's'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_s')

error[E14004]: lambda parameter only permitted as parameter to inlined function
  ┌─ TEMPFILE:7:31
  │
7 │     vector::for_each_mut(&mut v, |e| { *e = s; s = s + 1 });
  │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ unexpected lambda


